rest template for payload